changes in styles

--- a/src/Components/styles.css
+++ b/src/Components/styles.css
@@ -9,11 +9,11 @@
     height: 28rem;
 }
 
-@media screen and (max-width: 375px) {
+/* @media screen and (max-width: 375px) {
     .scroll{
         height: 20rem;
     }
-  }
+  } */
   
 
 .mic-toggle{
